flatpak: Simplify size changes

Instead of connecting every resource into a lambda, do it in place.

BUG: 508311