libdiscover/backends/FlatpakBackend/FlatpakResource.h
@@ -234,6 +234,7 @@ private:
     void setEolReason(const QString &reason);
     void loadPermissions();
     QVector<FlatpakPermission> readPermissions(const QString &file) const;
+    void reportSizeChange();
 
     const AppStream::Component m_appdata;
     FlatpakResource::Id m_id;
